<resources>
    <string name="app_name">SI Capstone dan TA Tekkom</string>
    <string name="desc_app_logo_splashscreen">desc_app_logo_splashscreen</string>
    <string name="desc_app_logo_login">App Logo Login</string>
    <string name="btn_login">Masuk</string>
    <string name="edt_hint_password">Masukkan Kata Sandi</string>
    <string name="tv_kata_sandi">Kata Sandi</string>
    <string name="edt_hint_id_pengguna">Masukkan NIM Mahasiswa</string>
    <string name="tv_nim_mahasiswa">NIM Mahasiswa</string>
    <string name="tv_error_input_blank">Kolom ini tidak boleh kosong!</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_kelompok">Kelompok</string>
    <string name="title_dokumen">Dokumen</string>
    <string name="title_profil">Profil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_nested_scroll_view_profil">desc_nested_scroll_view_profil</string>
    <string name="desc_img_photo_profil">desc_img_photo_profil</string>
    <string name="tv_title_profile_detail">Data Profil Akun</string>
    <string name="title_nama_lengkap">Nama Lengkap</string>
    <string name="btn_simpan">Simpan</string>
    <string name="tv_hint_nama_lengkap">Contoh: Maulana Yusuf Suradin</string>
    <string name="title_nim">NIM Mahasiswa</string>
    <string name="title_email">Email</string>
    <string name="title_no_telp">No. Telepon</string>
    <string name="tv_hint_nim">Contoh: 21120120140051</string>
    <string name="tv_hint_email">Contoh: yusuf@gmail.com</string>
    <string name="tv_hint_no_telp">Contoh: 081812881282     </string>
    <string name="nama_lengkap_mahasiswa">Nama Lengkap Mahasiswa</string>
    <string name="nim_mahasiswa">NIM Mahasiswa</string>
    <string name="tv_title_change_password">Ganti Kata Sandi</string>
    <string name="tv_title_current_password">Kata Sandi Saat Ini</string>
    <string name="tv_hint_current_password">Masukkan kata sandi saat ini</string>
    <string name="tv_new_password">Masukkan kata sandi baru</string>
    <string name="title_new_password">Kata Sandi Baru</string>
    <string name="konfirmasi_password_baru">Konfirmasi Kata Sandi Baru</string>
    <string name="tv_konfirmasi_password_baru">Masukkan ulang kata sandi baru</string>
    <string name="tv_error_email_invalid">Email tidak valid!</string>
    <string name="tv_error_phone_invalid">No. Telepon tidak valid!</string>
    <string name="tv_error_password_mismatch">Kata sandi baru tidak sama</string>
    <string name="tv_error_password_minimum_length">Kata sandi minimal 8 karakter!</string>
    <string name="btn_logout">Keluar</string>
    <string name="hello">Hello! 👋</string>
    <string name="tv_action">Aksi</string>
    <string name="judul_aksi">Judul Aksi</string>
    <string name="tv_pengumuman_terbaru">Pengumuman Terbaru</string>
    <string name="item_pengumuman">item_pengumuman</string>
    <string name="tv_title_item_pengumuman">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </string>
    <string name="tv_item_pengumuman_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="tv_postdate">Post date pengumuman</string>
    <string name="id">id</string>
    <string name="ic_back">ic_back</string>
    <string name="scroll_pengumuman">scroll_pengumuman</string>
    <string name="detail_pengumuman">Detail Pengumuman</string>
    <string name="lihat_informasi_selengkapnya">Lihat informasi selengkapnya.</string>
    <string name="klik_di_sini"><u>Klik di sini.</u></string>
    <string name="terjadi_kesalahan_pengumuman_tidak_ditemukan">Terjadi kesalahan! Pengumuman tidak ditemukan!</string>
    <string name="tv_title_sidang_proposal">Sidang Proposal</string>
    <string name="tv_title_pengumuman">Pengumuman</string>
    <string name="tv_title_expo">Expo Project</string>
    <string name="tv_title_tugas_akhir">Sidang Tugas Akhir</string>
    <string name="desc_tab_layout_dokumen">Tab Layout Dokumen</string>
    <string name="tv_dokumen_capstone">Dokumen Mahasiswa</string>
    <string name="tv_failed_dokumen">Terjadi kesalahan. Gagal mendapatkan data dokumen.</string>
    <string name="tv_title_laporan_tugas_akhir">Laporan Tugas Akhir</string>
    <string name="tv_pilih_dokumen">Pilih dokumen</string>
    <string name="tv_title_laporan_c100">Dokumen C100</string>
    <string name="tv_title_laporan_c200">Dokumen C200</string>
    <string name="tv_title_laporan_c300">Dokumen C300</string>
    <string name="tv_title_laporan_c400">Dokumen C400</string>
    <string name="tv_title_laporan_c500">Dokumen C500</string>
    <string name="tv_title_makalah_tugas_akhir">Makalah Tugas Akhir</string>
    <string name="tv_jadwal_tidak_tersedia">Jadwal Tidak Tersedia!</string>
    <string name="tv_belum_memiliki_kelompok">Anda belum mmendaftar capstone!</string>
    <string name="tv_anda_belum_memiliki_kelompok">Anda belum mendaftar capstone!</string>
    <string name="belum_memiliki_kelompok">Anda belum mendaftar capstone!</string>
    <string name="kelompok_belum_valid">Kelompok anda belum valid!</string>
    <string name="btn_unduh">Unduh</string>
    <string name="tv_terjadi_kesalahan">Mohon periksa kembali koneksi internet Anda!</string>
    <string name="alert_title">Alert title</string>
    <string name="tv_alert_message">Alert message</string>
    <string name="ya">Ya</string>
    <string name="batalkan">Batalkan</string>
    <string name="tv_daftar_capstone">Daftar Capstone</string>
    <string name="desc_tab_layout_daftar_capstone">Tab Layout Daftar Casptone</string>
    <string name="tv_kelompok_capstone_ta">Kelompok Capstone dan Tugas Akhir</string>
    <string name="tv_title_nomor_kelompok">Nomor Kelompok</string>
    <string name="tv_titik_dua">:</string>
    <string name="tv_value_nomor_kelompok">22</string>
    <string name="tv_title_topik">Topik</string>
    <string name="tv_value_topik">Smart System</string>
    <string name="tv_title_judul">Judul</string>
    <string name="tv_value_judul">Pengembangan Sistem Informasi Pengelolaan Capstone dan Tugas Akhir di Departemen Teknik Komputer Universitas Diponegoro\n</string>
    <string name="btn_selengkapnya">Selengkapnya</string>
    <string name="tv_title_dosbing">Dosen Pembimbing</string>
    <string name="tv_nama_dosen_pembimbing">Adnan Fauzi, S.T., M.Kom.</string>
    <string name="tv_nim_dosen_pembimbing">198101272018071001</string>
    <string name="tv_value_status_kelompok">Menunggu Validasi Kelompok!</string>
    <string name="tv_title_status_kelompok">Status</string>
    <string name="tv_belum_memiliki_dosen_pembimbing">Belum memiliki dosen pembimbing!</string>
    <string name="tv_title_detail_kelompok">Detail Kelompok</string>
    <string name="tv_title_anggota_kelompok">Anggota Kelompok</string>
    <string name="tv_detail_capstone_individu">Detail Capstone</string>
    <string name="tv_detail_mahasiswa_individu">Data Mahasiswa</string>
    <string name="tv_detail_peminatan_individu">Data Peminatan Mahasiswa</string>
    <string name="tv_skala_prioritas_peminatan">Skala prioritas peminatan</string>
    <string name="tv_ket_peminatan_individu">Pilih sesuai dengan urutan prioritas anda, pisahkan dengan tanda koma (contoh: 3,2,1,4)</string>
    <string name="tv_detail_topik_individu">Data Topik Mahasiswa</string>
    <string name="tv_skala_prioritas_topik">Skala prioritas topik</string>
    <string name="tv_ket_topik_individu">Pilih sesuai dengan urutan prioritas anda</string>
    <string name="tv_title_angkatan">Angkatan</string>
    <string name="tv_title_ipk">IPK</string>
    <string name="tv_title_sks">SKS</string>
    <string name="tv_title_siklus">Siklus</string>
    <string name="tv_title_jenis_kelamin">Jenis Kelamin</string>
    <string name="tv_title_judul_capstone">Judul Capstone</string>
    <string name="tv_title_peminatan1">1. Software &amp; Database</string>
    <string name="tv_title_peminatan2">2. Embedded System &amp; Robotics</string>
    <string name="tv_title_peminatan3">3. Computer Network &amp; Security</string>
    <string name="tv_title_peminatan4">4. Multimedia &amp; Game</string>
    <string name="tv_title_topik1">1. Early Warning System</string>
    <string name="tv_title_topik2">2. Building/area monitoring or controlling system</string>
    <string name="tv_title_topik3">3. Smart business/organization platform/support system</string>
    <string name="tv_title_topik4">4. Smart city and transportation</string>
    <string name="tv_hint_angkatan">Contoh: 2020</string>
    <string name="tv_hint_ipk">Contoh: 3.87</string>
    <string name="tv_hint_sks">Contoh: 111</string>
    <string name="tv_hint_siklus">Pilih siklus</string>
    <string name="tv_hint_jenis_kelamin">Pilih jenis kelamin</string>
    <string name="tv_hint_judul_capstone">Masukkan usulan judul</string>
    <string name="tv_hint_skala_peminatan">Contoh: 4,2,3,1</string>
    <string name="tv_hint_skala_topik">Contoh: 4,2,3,1</string>
    <string name="tv_des_dropdown">Dropdown</string>
    <string name="nim_tidak_valid">14 digit NIM tidak valid!</string>
    <string name="no_telp_tidak_valid">No. Telepon tidak valid!</string>
    <string name="email_tidak_valid">Email tidak valid!</string>
    <string name="sks_tidak_valid">SKS tidak valid!</string>
    <string name="ipk_tidak_valid">IPK tidak valid!</string>
    <string name="peminatan_tidak_valid">Peminatan tidak valid!</string>
    <string name="topik_tidak_valid">Topik tidak valid!</string>
    <string name="tv_detail_capstone_kelompok">Data Detail Capstone</string>
    <string name="tv_title_topik_capstone">Topik Capstone</string>
    <string name="tv_hint_topik_capstone">Pilih topik capstone</string>
    <string name="tv_title_dosbing1">Dosen Pembimbing 1</string>
    <string name="tv_hint_dosbing1">Pilih dosen pembimbing 1</string>
    <string name="tv_title_dosbing2">Dosen Pembimbing 2</string>
    <string name="tv_hint_dosbing2">Pilih dosen pembimbing 2</string>
    <string name="tv_detail_mahasiswa_kelompok">Detail Kelompok</string>
    <string name="tv_title_card_mahasiswa1">Mahasiswa 1</string>
    <string name="tv_title_card_mahasiswa2">Mahasiswa 2</string>
    <string name="tv_title_card_mahasiswa3">Mahasiswa 3</string>
    <string name="tv_error_duplicate_values">Dosen pembimbing 1 dan 2 tidak boleh sama!</string>
    <string name="tv_error_duplicate_nim">Mahasiswa tidak boleh sama!</string>
    <string name="tv_titile_jadwal_sidang_proposal">Jadwal Sidang Proposal</string>
    <string name="tv_waktu">Waktu</string>
    <string name="ruang_sidang">Ruang Sidang</string>
    <string name="btn_unduh_jadwal">Unduh Jadwal</string>
    <string name="tv_hari">Hari, Tanggal</string>
    <string name="tv_title_detail_sidang_proposal">Detail Sidang Proposal</string>
    <string name="tv_title_dospeng">Dosen Penguji</string>
    <string name="tv_expo_project_mahasiswa">Pendaftaran Expo Project</string>
    <string name="tv_daftar_expo">Daftar Expo</string>
    <string name="tv_title_judul_tugas_akhir">Judul Tugas Akhir</string>
    <string name="tv_hint_judul_tugas_akhir">Masukkan judul tugas akhir (maks. 20 kata)</string>
    <string name="tv_link_pendukung_expo">Link Berkas Pendukung</string>
    <string name="edit_informasi_kelompok">Ubah Informasi Kelompok</string>
</resources>