<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_item_pengumuman"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_outline"
        android:clipToOutline="true"
        android:contentDescription="@string/item_pengumuman"
        android:src="@color/shimmer_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="s" />

    <LinearLayout
        android:id="@+id/linear_layout_pengumuman"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/garis_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_item_pengumuman_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppinsmedium"
            android:maxLines="2"
            android:text="@string/tv_title_item_pengumuman"
            android:textColor="@color/RoyalBlue"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_item_pengumuman_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppinsregular"
            android:maxLines="2"
            android:text="@string/tv_item_pengumuman_content"
            android:textColor="@color/SlateGrey"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_item_pengumuman_postdata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/tv_postdate"
            android:textColor="@color/SlateGrey"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>


    <View
        android:id="@+id/garis_horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/shimmer_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_pengumuman" />

    <View
        android:id="@+id/garis_vertical"
        android:layout_width="5dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_line_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>