<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Minimumblue"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_toolbar_kelompok_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/White"
        app:cardElevation="8dp"
        app:strokeColor="@color/White">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/White"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_circle_back_arrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@color/lightblue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ic_back_arrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/ic_back"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintBottom_toBottomOf="@id/iv_circle_back_arrow"
                app:layout_constraintEnd_toEndOf="@id/iv_circle_back_arrow"
                app:layout_constraintStart_toStartOf="@id/iv_circle_back_arrow"
                app:layout_constraintTop_toTopOf="@id/iv_circle_back_arrow" />

            <TextView
                android:id="@+id/tv_title_pengumuman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/edit_informasi_kelompok"
                android:textColor="@color/lightblue"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_circle_back_arrow"
                app:layout_constraintStart_toEndOf="@id/iv_circle_back_arrow"
                app:layout_constraintTop_toTopOf="@id/iv_circle_back_arrow" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_error_kelompok_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="16dp"
                android:paddingHorizontal="16dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/White"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:strokeColor="@android:color/transparent">

                <TextView
                    android:id="@+id/tv_error_edit_kelompok"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:background="@drawable/rounded_outline_text_view"
                    android:fontFamily="@font/poppinsmedium"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:text="@string/tv_terjadi_kesalahan"
                    android:textColor="@color/DarkGrey"
                    android:textSize="11sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_fragment_kelompok_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <include layout="@layout/shimmer_kelompok_fragment" />

            </com.facebook.shimmer.ShimmerFrameLayout>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_value_kelompok_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:visibility="visible"
                app:cardBackgroundColor="@color/White"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:contentPadding="12dp"
                app:strokeColor="@android:color/transparent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_title_kelompok_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/poppinssemibold"
                        android:maxLines="1"
                        android:text="@string/tv_kelompok_capstone_ta"
                        android:textColor="@color/RoyalBlue"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/linear_layout_value_kelompok_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_title_kelompok_detail">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_title_status_kelompok_detail"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppinsmedium"
                                android:text="@string/tv_title_status_kelompok"
                                android:textColor="@color/lightblue"
                                android:textSize="11sp"
                                tools:ignore="TextSizeCheck" />

                            <TextView
                                android:id="@+id/tv_titik_dua_status_kelompok_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppinsmedium"
                                android:text="@string/tv_titik_dua"
                                android:textColor="@color/lightblue"
                                android:textSize="11sp" />

                            <TextView
                                android:id="@+id/tv_value_status_kelompok_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"

                                android:fontFamily="@font/poppinsmedium"
                                tools:text="@string/tv_value_status_kelompok"
                                android:textColor="@color/lightblue"
                                android:textSize="11sp" />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_title_nomor_kelompok_detail"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppinsmedium"
                                android:text="@string/tv_title_nomor_kelompok"
                                android:textColor="@color/lightblue"
                                android:textSize="11sp"
                                tools:ignore="TextSizeCheck" />

                            <TextView
                                android:id="@+id/tv_titik_dua_nomor_kelompok_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppinsmedium"
                                android:text="@string/tv_titik_dua"
                                android:textColor="@color/lightblue"
                                android:textSize="11sp" />

                            <TextView
                                android:id="@+id/tv_value_nomor_kelompok_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:fontFamily="@font/poppinsmedium"
                                tools:text="@string/tv_value_nomor_kelompok"
                                android:textColor="@color/lightblue"
                                android:textSize="11sp" />

                        </LinearLayout>


                        <TextView
                            android:id="@+id/tv_title_topik_capstone_kelompok"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppinsmedium"
                            android:layout_marginTop="8dp"
                            android:text="@string/tv_title_topik_capstone"
                            android:textColor="@color/RoyalBlue"
                            android:textSize="11sp" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_topik_capstone_edit"
                            style="@style/CustomTextInputLayoutWithDropdown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            app:errorTextAppearance="@style/ErrorTextAppearance"
                            app:hintEnabled="false">

                            <com.kel022322.sicapstonedantatekkom.util.customview.CustomAutoCompleteTextView
                                android:id="@+id/edt_topik_capstone_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:fontFamily="@font/poppinsmedium"
                                android:hint="@string/tv_hint_topik_capstone"
                                android:maxLines="1"
                                android:paddingHorizontal="8dp"
                                android:paddingVertical="12dp"
                                android:textColor="@color/lightblue"
                                android:textColorHint="@color/DarkGrey"
                                android:textSize="10sp"
                                tools:ignore="SmallSp,SpeakableTextPresentCheck,TextContrastCheck,TouchTargetSizeCheck" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/tv_title_judul_capstone_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="@font/poppinsmedium"
                            android:text="@string/tv_title_judul_capstone"
                            android:textColor="@color/RoyalBlue"
                            android:textSize="11sp" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_judul_capstone_kelompok"
                            style="@style/CustomTextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            app:errorTextAppearance="@style/ErrorTextAppearance"
                            app:hintEnabled="false">

                            <com.kel022322.sicapstonedantatekkom.util.customview.CustomTextInputEditText
                                android:id="@+id/edt_judul_capstone_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:fontFamily="@font/poppinsmedium"
                                android:hint="@string/tv_hint_judul_capstone"
                                android:maxLines="1"
                                android:lines="1"
                                android:singleLine="true"
                                android:paddingHorizontal="8dp"
                                android:paddingVertical="12dp"
                                android:textColor="@color/lightblue"
                                android:textColorHint="@color/DarkGrey"
                                android:textSize="10sp"
                                tools:ignore="SmallSp,TextContrastCheck,TouchTargetSizeCheck" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/btn_simpan"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginTop="16dp"
                            android:backgroundTint="@color/RoyalBlue"
                            android:fontFamily="@font/poppinsmedium"
                            android:text="@string/btn_simpan"
                            android:textAllCaps="false"
                            android:textColor="@color/White"
                            android:textSize="12sp"
                            app:cornerRadius="4dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/linear_layout_data_profil_akun"
                            tools:ignore="DuplicateSpeakableTextCheck" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>